compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_real_overflow-7.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 1e308 / 0.1

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: 11..22, state: Error(RealOverflow) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> Spanned(RealOverflow, 17..18)

error at 17..18: real overflow in compile-time expression

