compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_real_overflow-8.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "-1e308 / 0.1"

---
ConstEvalCtx {
    inner: RwLock {
        data: InnerCtx {
            eval_infos: [
                EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..23 }, state: Error(ConstError { kind: RealOverflow, span: Span { file: None, range: 18..19 } }) },
            ],
            var_to_expr: {
                GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
            },
        },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: RealOverflow, span: Span { file: None, range: 18..19 } }

error at 18..19: real overflow in compile-time expression

