compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_real_overflow-9.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: 10.0 ** 309

---
InnerCtx {
    eval_infos: [
        EvalInfo { unit_id: UnitId(0), span: Span { file: None, range: 11..22 }, state: Error(ConstError { kind: RealOverflow, span: Span { file: None, range: 16..18 } }) },
    ],
    var_to_expr: {
        GlobalDefId(UnitId(0), DefId(0)): ConstExpr { id: 0 },
    },
}
ConstExpr { id: 0 } -> ConstError { kind: RealOverflow, span: Span { file: None, range: 16..18 } }

error at 16..18: real overflow in compile-time expression

