compiler/toc_analysis/src/const_eval/snapshots/toc_analysis__const_eval__test__error_string_too_big-2.snap
---
source: compiler/toc_analysis/src/const_eval/test.rs
expression: "\"✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨✨aaaaaaaaaaaaaaa\"+'a'"

---
"_"@(FileId(1), 6..7) -> ConstError { kind: StringTooBig, span: (FileId(1), 268..269) }

error in file FileId(1) at 268..269: produced a string that is too large

